# bpemb

./: LICENSE  README.md  bpe.py  download.bin.md  download.md  download.txt.md  entity_typing_data.md  preprocess_text.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
bpemb/: __init__.py  available_languages.py  available_vocab_sizes.py  bpemb.py  util.py
bpemb/tests/: bpemb_test.py
