[metadata]
name = bpemb
version = 0.3.4
author = Benjamin Heinzerling
author_email = benjamin.heinzerling@h-its.org
license = MIT
description = Byte-pair embeddings in 275 languages
url = https://nlp.h-its.org/bpemb
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
project_urls =
    Source Code = https://github.com/bheinzerling/bpemb
    Bug Tracker = https://github.com/bheinzerling/bpemb

[options]
packages = bpemb
zip_safe = True
install_requires =
    gensim
    numpy
    requests
    sentencepiece
    tqdm
